# TABLEMATCH

./: .gitignore  README-Framework.md  README.md  observablehq.config.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: deploy.yml
py/: README.md  main.py  parse.py  pyproject.toml  reqs.py  shows.yaml
py/models/: match.py  promotion.py  show.py  wrestler.py
src/: index.md
src/components/: bigNumber.js  donutChart.js
src/data/: index.zip.sh  show-[id].zip.sh  shows.db.sh  wrestler-[id].zip.sh
src/shows/: [id].md.js
src/wrestlers/: [id].md.js  wrestler-[id].zip.sh
